// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/Drawer Drawer Field Test 1`] = `
<div>
  <Drawer
    ariaDescription="My Drawer"
    className="is-right"
    title="Drawer Title"
  >
    <div
      aria-describedby="My Drawer"
      aria-labelledby="Drawer Title"
      className="drawer__wrapper"
      role="dialog"
    >
      <div
        className="drawer is-right"
      >
        <header
          className="drawer__header"
        >
          <h1
            className="drawer__title"
          >
            Drawer Title
          </h1>
          <button
            aria-label="Close"
            className="drawer__close"
            tabIndex={0}
          >
            <Icon
              size="medium"
              symbol="close"
            >
              <span
                className="ui-icon ui-medium"
              >
                <svg>
                  <use
                    xlinkHref="#i-close"
                  />
                </svg>
              </span>
            </Icon>
          </button>
        </header>
        <div
          className="drawer__body"
        >
          <div
            className="drawer__content"
          >
            <section
              className="border p-8 bg-white mb-8"
            >
              <FieldSection
                className="md:grid md:grid-cols-4 md:gap-8"
                title="Section Title"
              >
                <div
                  className="field-section"
                >
                  <header
                    className="field-section__header"
                  >
                    <h2
                      className="field-section__title"
                    >
                      Section Title
                    </h2>
                  </header>
                  <div
                    className="field-section__grid md:grid md:grid-cols-4 md:gap-8"
                  >
                    <Field
                      label="Alpha"
                      name="label1"
                      placeholder="Enter text"
                      register={[Function]}
                    >
                      <div
                        className="field"
                      >
                        <label
                          className="label"
                          htmlFor="label1"
                        >
                          Alpha
                        </label>
                        <div
                          className="control"
                        >
                          <input
                            aria-describedby="label1-error"
                            aria-invalid={false}
                            className="input"
                            id="label1"
                            name="label1"
                            placeholder="Enter text"
                            type="text"
                          />
                        </div>
                      </div>
                    </Field>
                    <Field
                      label="Beta"
                      name="label2"
                      placeholder="Enter text"
                      register={[Function]}
                    >
                      <div
                        className="field"
                      >
                        <label
                          className="label"
                          htmlFor="label2"
                        >
                          Beta
                        </label>
                        <div
                          className="control"
                        >
                          <input
                            aria-describedby="label2-error"
                            aria-invalid={false}
                            className="input"
                            id="label2"
                            name="label2"
                            placeholder="Enter text"
                            type="text"
                          />
                        </div>
                      </div>
                    </Field>
                    <Field
                      label="Gamma"
                      name="label3"
                      placeholder="Enter text"
                      register={[Function]}
                    >
                      <div
                        className="field"
                      >
                        <label
                          className="label"
                          htmlFor="label3"
                        >
                          Gamma
                        </label>
                        <div
                          className="control"
                        >
                          <input
                            aria-describedby="label3-error"
                            aria-invalid={false}
                            className="input"
                            id="label3"
                            name="label3"
                            placeholder="Enter text"
                            type="text"
                          />
                        </div>
                      </div>
                    </Field>
                    <Field
                      label="Delta"
                      name="label4"
                      placeholder="Enter text"
                      register={[Function]}
                    >
                      <div
                        className="field"
                      >
                        <label
                          className="label"
                          htmlFor="label4"
                        >
                          Delta
                        </label>
                        <div
                          className="control"
                        >
                          <input
                            aria-describedby="label4-error"
                            aria-invalid={false}
                            className="input"
                            id="label4"
                            name="label4"
                            placeholder="Enter text"
                            type="text"
                          />
                        </div>
                      </div>
                    </Field>
                    <Field
                      label="Epsilon"
                      name="label5"
                      placeholder="Enter text"
                      register={[Function]}
                    >
                      <div
                        className="field"
                      >
                        <label
                          className="label"
                          htmlFor="label5"
                        >
                          Epsilon
                        </label>
                        <div
                          className="control"
                        >
                          <input
                            aria-describedby="label5-error"
                            aria-invalid={false}
                            className="input"
                            id="label5"
                            name="label5"
                            placeholder="Enter text"
                            type="text"
                          />
                        </div>
                      </div>
                    </Field>
                    <Field
                      label="Zeta"
                      name="label6"
                      placeholder="Enter text"
                      register={[Function]}
                    >
                      <div
                        className="field"
                      >
                        <label
                          className="label"
                          htmlFor="label6"
                        >
                          Zeta
                        </label>
                        <div
                          className="control"
                        >
                          <input
                            aria-describedby="label6-error"
                            aria-invalid={false}
                            className="input"
                            id="label6"
                            name="label6"
                            placeholder="Enter text"
                            type="text"
                          />
                        </div>
                      </div>
                    </Field>
                    <Field
                      label="Eta"
                      name="label7"
                      placeholder="Enter text"
                      register={[Function]}
                    >
                      <div
                        className="field"
                      >
                        <label
                          className="label"
                          htmlFor="label7"
                        >
                          Eta
                        </label>
                        <div
                          className="control"
                        >
                          <input
                            aria-describedby="label7-error"
                            aria-invalid={false}
                            className="input"
                            id="label7"
                            name="label7"
                            placeholder="Enter text"
                            type="text"
                          />
                        </div>
                      </div>
                    </Field>
                    <Field
                      label="Theta"
                      name="label8"
                      placeholder="Enter text"
                      register={[Function]}
                    >
                      <div
                        className="field"
                      >
                        <label
                          className="label"
                          htmlFor="label8"
                        >
                          Theta
                        </label>
                        <div
                          className="control"
                        >
                          <input
                            aria-describedby="label8-error"
                            aria-invalid={false}
                            className="input"
                            id="label8"
                            name="label8"
                            placeholder="Enter text"
                            type="text"
                          />
                        </div>
                      </div>
                    </Field>
                  </div>
                </div>
              </FieldSection>
            </section>
          </div>
        </div>
      </div>
    </div>
  </Drawer>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Prototypes/Drawer Drawer View Test 1`] = `
<div>
  <Drawer
    ariaDescription="My Drawer"
    className="is-right"
    title="Drawer Title"
  >
    <div
      aria-describedby="My Drawer"
      aria-labelledby="Drawer Title"
      className="drawer__wrapper"
      role="dialog"
    >
      <div
        className="drawer is-right"
      >
        <header
          className="drawer__header"
        >
          <h1
            className="drawer__title"
          >
            Drawer Title
          </h1>
          <button
            aria-label="Close"
            className="drawer__close"
            tabIndex={0}
          >
            <Icon
              size="medium"
              symbol="close"
            >
              <span
                className="ui-icon ui-medium"
              >
                <svg>
                  <use
                    xlinkHref="#i-close"
                  />
                </svg>
              </span>
            </Icon>
          </button>
        </header>
        <div
          className="drawer__body"
        >
          <div
            className="drawer__content"
          >
            <section
              className="border rounded-md p-8 bg-white mb-8"
            >
              <ViewSection
                className="md:grid md:grid-cols-4 md:gap-8"
                insetGrid={true}
                tinted={true}
                title="Section Title"
              >
                <div
                  className="view-section"
                >
                  <header
                    className="view-section__header"
                  >
                    <h2
                      className="view-section__title"
                    >
                      Section Title
                    </h2>
                  </header>
                  <div
                    className="view-grid is-tinted is-inset md:grid md:grid-cols-4 md:gap-8"
                  >
                    <ViewItem
                      label="First Name"
                    >
                      <p
                        className="view-item"
                      >
                        <span
                          className="view-item__label"
                        >
                          First Name
                        </span>
                        <span
                          className="view-item__value"
                        >
                          Lisa
                        </span>
                      </p>
                    </ViewItem>
                    <ViewItem
                      label="Middle Name"
                    >
                      <p
                        className="view-item"
                      >
                        <span
                          className="view-item__label"
                        >
                          Middle Name
                        </span>
                        <span
                          className="view-item__value"
                        >
                          S
                        </span>
                      </p>
                    </ViewItem>
                    <ViewItem
                      label="Last Name"
                    >
                      <p
                        className="view-item"
                      >
                        <span
                          className="view-item__label"
                        >
                          Last Name
                        </span>
                        <span
                          className="view-item__value"
                        >
                          Jones
                        </span>
                      </p>
                    </ViewItem>
                    <ViewItem
                      label="Date of Birth"
                    >
                      <p
                        className="view-item"
                      >
                        <span
                          className="view-item__label"
                        >
                          Date of Birth
                        </span>
                        <span
                          className="view-item__value"
                        >
                          01/01/1985
                        </span>
                      </p>
                    </ViewItem>
                    <ViewItem
                      label="Email"
                    >
                      <p
                        className="view-item"
                      >
                        <span
                          className="view-item__label"
                        >
                          Email
                        </span>
                        <span
                          className="view-item__value"
                        >
                          lisa@gmail.com
                        </span>
                      </p>
                    </ViewItem>
                    <ViewItem
                      helper="Cell"
                      label="Phone"
                    >
                      <p
                        className="view-item"
                      >
                        <span
                          className="view-item__label"
                        >
                          Phone
                        </span>
                        <span
                          className="view-item__value"
                        >
                          111-222-3333
                        </span>
                        <span
                          className="view-item__helper"
                        >
                          Cell
                        </span>
                      </p>
                    </ViewItem>
                    <ViewItem
                      helper="Work"
                      label="Second Phone"
                    >
                      <p
                        className="view-item"
                      >
                        <span
                          className="view-item__label"
                        >
                          Second Phone
                        </span>
                        <span
                          className="view-item__value"
                        >
                          111-222-3333
                        </span>
                        <span
                          className="view-item__helper"
                        >
                          Work
                        </span>
                      </p>
                    </ViewItem>
                    <ViewItem
                      label="Perferred Contact"
                    >
                      <p
                        className="view-item"
                      >
                        <span
                          className="view-item__label"
                        >
                          Perferred Contact
                        </span>
                        <span
                          className="view-item__value"
                        >
                          Phone
                        </span>
                      </p>
                    </ViewItem>
                  </div>
                </div>
              </ViewSection>
            </section>
          </div>
        </div>
      </div>
    </div>
  </Drawer>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Prototypes/Drawer Has Background 1`] = `
<div>
  <Drawer
    ariaDescription="My Drawer"
    className="is-right"
    hasBackdrop={true}
    title="Drawer Title"
  >
    <div
      aria-describedby="My Drawer"
      aria-labelledby="Drawer Title"
      className="drawer__wrapper has-backdrop"
      role="dialog"
    >
      <div
        className="drawer is-right"
      >
        <header
          className="drawer__header"
        >
          <h1
            className="drawer__title"
          >
            Drawer Title
          </h1>
          <button
            aria-label="Close"
            className="drawer__close"
            tabIndex={0}
          >
            <Icon
              size="medium"
              symbol="close"
            >
              <span
                className="ui-icon ui-medium"
              >
                <svg>
                  <use
                    xlinkHref="#i-close"
                  />
                </svg>
              </span>
            </Icon>
          </button>
        </header>
        <div
          className="drawer__body"
        >
          <div
            className="drawer__content"
          >
            <section
              className="border rounded-md p-8 bg-white mb-8"
            >
              <p>
                Test
              </p>
            </section>
          </div>
        </div>
      </div>
    </div>
  </Drawer>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Prototypes/Drawer Standard 1`] = `
<div>
  <Drawer
    ariaDescription="My Drawer"
    className="is-right"
    title="Drawer Title"
  >
    <div
      aria-describedby="My Drawer"
      aria-labelledby="Drawer Title"
      className="drawer__wrapper"
      role="dialog"
    >
      <div
        className="drawer is-right"
      >
        <header
          className="drawer__header"
        >
          <h1
            className="drawer__title"
          >
            Drawer Title
          </h1>
          <button
            aria-label="Close"
            className="drawer__close"
            tabIndex={0}
          >
            <Icon
              size="medium"
              symbol="close"
            >
              <span
                className="ui-icon ui-medium"
              >
                <svg>
                  <use
                    xlinkHref="#i-close"
                  />
                </svg>
              </span>
            </Icon>
          </button>
        </header>
        <div
          className="drawer__body"
        >
          <div
            className="drawer__content"
          >
            <section
              className="border rounded-md p-8 bg-white mb-8"
            >
              <p>
                Test
              </p>
            </section>
          </div>
        </div>
      </div>
    </div>
  </Drawer>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;
